[gd_scene load_steps=3 format=3 uid="uid://bdounve2fo2qi"]

[ext_resource type="Script" path="res://menu.gd" id="1_xl3hf"]
[ext_resource type="PackedScene" uid="uid://npxuga8h2myi" path="res://scenes/options.tscn" id="2_kj2a1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_xl3hf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -222.0
offset_right = 89.0
offset_bottom = -121.0
grow_vertical = 0
scale = Vector2(2, 2)
alignment = 1

[node name="start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_button")
text = "Start"

[node name="options_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_button")
text = "Quit"

[node name="Options" parent="." instance=ExtResource("2_kj2a1")]
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options_button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_pressed"]
